add getting data of shared note by id
