# internal/sharednote/handler_http.go
@@ -30,6 +30,7 @@ func NewHandlerHTTP(
 	{
 		sharedNote.POST("/incoming", handler.create)
 		sharedNote.GET("/", handler.getAllInfo)
+		sharedNote.GET("/:shared-note-id", handler.getDataByID)
 		sharedNote.DELETE("/incoming/:shared-note-id", handler.delete)
 		sharedNote.POST("/incoming/:shared-note-id", handler.accept)
 	}
@@ -120,7 +121,7 @@ func (h *HandlerHTTP) getAllInfo(c *gin.Context) {
 
 	notes, err := h.suc.GetAllInfo(c, userID)
 	if err != nil {
-		log.Error("get all notes by notebook id: ", err)
+		log.Error("get all shared notes info: ", err)
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": domain.ErrNoteNotFound.Error()})
 		return
 	}
@@ -131,7 +132,7 @@ func (h *HandlerHTTP) getAllInfo(c *gin.Context) {
 	})
 }
 
-// @Summary		Accept a shared note
+// @Summary		Accepting a shared note
 // @Security	BearerToken
 // @Tags		Shared note
 // @Accept		json
@@ -157,4 +158,32 @@ func (h *HandlerHTTP) accept(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{"status": "ok"})
+}
+
+// @Summary		Getting a data of shared note
+// @Security	BearerToken
+// @Tags		Shared note
+// @Accept		json
+// @Produce		json
+// @Param		shared-note-id path int true "Shared note ID"
+// @Success		200 {object} domain.SharedNoteData "Data of shared note"
+// @Failure		400 {object} docs.MessageResponse "Error message"
+// @Router		/shared-notes/{shared-note-id} [get]
+func (h *HandlerHTTP) getDataByID(c *gin.Context) {
+	sharedNoteID, err := strconv.ParseInt(c.Param("shared-note-id"), 10, 64)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": "invalid shared note id param"})
+		return
+	}
+
+	userID := c.MustGet("userID").(int64)
+
+	data, err := h.suc.GetDataByID(c, sharedNoteID, userID)
+	if err != nil {
+		log.Error("get data of shared note by id: ", err)
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": domain.ErrSharedNoteNotFound.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, data)
 }
